--- a/templates/upload.html
+++ b/templates/upload.html
@@ -7,6 +7,7 @@
 
 
 {% block content %}
+    {% if request.user.is_staff %}
     <h3>Data upload</h3>
     <hr>
     <br>
@@ -124,6 +125,9 @@
         <br>
         <input class='butt' type="submit" value="Submit"/>
     </form>
+    {% else %}
+    <h3>You have not have access to upload data.</h3>
+    {% endif %}
 {% endblock %}
 
 
