--- a/templates/data/list_contrib.html
+++ b/templates/data/list_contrib.html
@@ -1,10 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+{% extends 'base.html' %}
+{% block content %}
+<ul>
+    {% for o in obj %}
+        <li><a href="data/edit/o.id" >{{ o.iba_code }}
+        {{ o.timestamp }}</a></li>
+    {% endfor %}
+</ul>
+{% endblock %}
