--- a/templates/home.html
+++ b/templates/home.html
@@ -40,9 +40,7 @@
 
 	        </div>
 	        <div class="main_div col-lg-8 col-md-8 col-sm-8 col-xs-8">
-	        	
-	        	MAIN CONTAINER
-
+                <iframe width="100%" height="100%" src="/visualize"></iframe>
 	        </div>
 	        <div class="right_nav col-lg-2 col-md-2 col-sm-2 col-xs-2">
 	        	<div class="filter_header col-lg-12 col-md-12 col-sm-12 col-xs-12" style="font-size: 18px; color: white; text-align: center; padding: 5px; background-color: rgb(0,0,0,1);">
